--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -65,9 +65,9 @@
 
     <!-- Empieza la programación de las tablas
       Primero se define las columnas con "th", "td" es para definir el contenido de cada columna-->
-    <div class="container p-4 mt-5">
+    <div class="container p-4 mt-4">
       <table class="table">
-        <thead class="text-center">
+        <thead>
           <tr class="table">
             <!-- Las columnas habitualmente son estáticas, en este caso siempre serán estáticas -->
             <th scope="col">Nombre del código</th>
@@ -77,7 +77,7 @@
             <th scope="col">Acciones</th>
           </tr>
         </thead>
-        <tbody class="text-center">
+        <tbody>
           <tr>
             <!-- Esto si ya es contenido que cuando vaya conectado a db, será interactivo -->
             <td>ING_WILL</td>
@@ -92,8 +92,8 @@
               </div>
             </td>
             <td>
-              <button type="button" class="btn btn-danger img-fluid"><img
-                  src="../../resources/img/svg/delete_icon.svg" class="tamanio_edicion_botones"></button>
+              <button type="button" class="btn btn-danger img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
+                  class="tamanio_edicion_botones"></button>
               <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
                 data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
@@ -114,10 +114,11 @@
               </div>
             </td>
             <td>
-              <button type="button" class="btn btn-danger img-fluid"><img
-                  src="../../resources/img/svg/delete_icon.svg" class="tamanio_edicion_botones"></button>
+              <button type="button" class="btn btn-danger img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
+                  class="tamanio_edicion_botones"></button>
               <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
-                data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"                  class="tamanio_edicion_botones"></button>
+                data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
+                  class="tamanio_edicion_botones"></button>
               <!-- Aqui se define si el check se le podrá cambiar la propiedad, aqui es una vista previa así que por motivos de diseño
                   No lo habilitamos-->
             </td>
@@ -135,8 +136,8 @@
               </div>
             </td>
             <td>
-              <button type="button" class="btn btn-danger img-fluid"><img
-                  src="../../resources/img/svg/delete_icon.svg" class="tamanio_edicion_botones"></button>
+              <button type="button" class="btn btn-danger img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
+                  class="tamanio_edicion_botones"></button>
               <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
                 data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
