--- a/system_huellitas/views/admin/scrud_permisos.html
+++ b/system_huellitas/views/admin/scrud_permisos.html
@@ -64,7 +64,7 @@
 
     <!-- Empieza la programación de las tablas
       Primero se define las columnas con "th", "td" es para definir el contenido de cada columna-->
-    <div class="container p-4 mt-5">
+    <div class="container p-4 mt-4">
       <table class="table">
         <thead class="text-center">
           <tr class="table">
@@ -88,8 +88,8 @@
           <tr>
             <td>Administrador</td>
             <td>
-              <button type="button" class="btn btn-danger img-fluid"><img
-                  src="../../resources/img/svg/delete_icon.svg" class="tamanio_edicion_botones"></button>
+              <button type="button" class="btn btn-danger img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
+                  class="tamanio_edicion_botones"></button>
               <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
                 data-bs-target="#actPermiso"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
@@ -100,8 +100,8 @@
           <tr>
             <td>Vendedor</td>
             <td>
-              <button type="button" class="btn btn-danger img-fluid"><img
-                  src="../../resources/img/svg/delete_icon.svg" class="tamanio_edicion_botones"></button>
+              <button type="button" class="btn btn-danger img-fluid"><img src="../../resources/img/svg/delete_icon.svg"
+                  class="tamanio_edicion_botones"></button>
               <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
                 data-bs-target="#actPermiso"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
@@ -128,7 +128,7 @@
         <div class="modal-header bg-orange-color">
           <!-- Esto define el titiulo del modal que aparece en la franja naranja -->
           <div class="container text-center">
-            <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Agregar permiso</h1>
+            <h1 class="modal-title fs-5 text-white fw-bold" id="exampleModalLabel">Agregar permiso</h1>
           </div>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
@@ -137,7 +137,7 @@
           <div class="row">
             <div class="col-12">
               <p class="fs-8 btn-orange-color fw-bold">Nombre del permiso</p>
-              <input type="text" class="form-control shadow" placeholder="Ej. Analista" aria-label="codigo"
+              <input type="text" class="form-control shadow bg-white" placeholder="Ej. Analista" aria-label="codigo"
                 id="NombreP_AgregarPermisos" name="NombreP_AgregarPermisosN">
               <br>
             </div>
@@ -242,7 +242,7 @@
         <!-- El div que esta debajo del comentario indica el color de fondo del titulo del modal y el titulo -->
         <div class="modal-header bg-orange-color">
           <div class="container text-center">
-            <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Editar permiso</h1>
+            <h1 class="modal-title fs-5 text-white fw-bold" id="exampleModalLabel">Editar permiso</h1>
           </div>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
@@ -250,7 +250,7 @@
           <div class="row">
             <div class="col-12">
               <p class="fs-8 btn-orange-color fw-bold">Nombre del permiso</p>
-              <input type="text" class="form-control shadow" placeholder="Ej. Analista" aria-label="codigo"
+              <input type="text" class="form-control shadow bg-white" placeholder="Ej. Analista" aria-label="codigo"
                 id="Nombre_ActPermisos" name="Nombre_ActPermisosN">
               <br>
             </div>
