--- a/system_huellitas/views/admin/scrud_productos_gatos.html
+++ b/system_huellitas/views/admin/scrud_productos_gatos.html
@@ -81,10 +81,15 @@
                         <td>
                             <img src="../../resources/img/png/cat.png" alt="">
                         </td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
+                        <td>Comida Rufo Para Perro Cachorro - 44lbs</td>
+                        <td>18 de octubre de 2024</td>
+                        <td>Alimentos</td>
+                        <td>
+                            <div class="form-check form-switch">
+                                <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                    id="switch1" name="switch1" checked>
+                            </div>
+                        </td>
                         <td>
                             <button type="button" class="btn btn-light"><img
                                     src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
@@ -100,10 +105,15 @@
                         <td>
                             <img src="../../resources/img/png/cat.png" alt="">
                         </td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
+                        <td>Comida Rufo Para Perro Cachorro - 44lbs</td>
+                        <td>18 de octubre de 2024</td>
+                        <td>Alimentos</td>
+                        <td>
+                            <div class="form-check form-switch">
+                                <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                    id="switch2" name="switch2" checked>
+                            </div>
+                        </td>
                         <td>
                             <button type="button" class="btn btn-light"><img
                                     src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
@@ -206,8 +216,8 @@
                                         <label for="tipo_categoria" class="form-label fw-semibold">Categoría</label>
                                         <select class="form-select" id="tipo_categoria" name="tipoCategoria" required>
                                             <option selected disabled value="">Selecciona la categoría</option>
-                                            <option>Perro</option>
-                                            <option>Gato</option>
+                                            <option></option>
+                                            <option></option>
                                         </select>
                                     </div>
                                     <div class="mb-3">
@@ -323,8 +333,8 @@
                                         <label for="tipo_categoria" class="form-label fw-semibold">Categoría</label>
                                         <select class="form-select" id="tipo_categoria" name="tipoCategoria" required>
                                             <option selected disabled value="">Selecciona la categoría</option>
-                                            <option>Perro</option>
-                                            <option>Gato</option>
+                                            <option></option>
+                                            <option></option>
                                         </select>
                                     </div>
                                     <div class="mb-3">
