--- a/system_huellitas/views/admin/scrud_productos_perros.html
+++ b/system_huellitas/views/admin/scrud_productos_perros.html
@@ -80,10 +80,15 @@
                         <td>
                             <img src="../../resources/img/png/dog.png" alt="">
                         </td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
+                        <td>Comida Rufo Para Perro Cachorro - 44lbs</td>
+                        <td>18 de octubre de 2024</td>
+                        <td>Alimentos</td>
+                        <td>
+                            <div class="form-check form-switch">
+                                <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                    id="switch1" name="switch1" checked>
+                            </div>
+                        </td>
                         <td>
                             <button type="button" class="btn btn-light"><img
                                     src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
@@ -99,10 +104,15 @@
                         <td>
                             <img src="../../resources/img/png/dog.png" alt="">
                         </td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
+                        <td>Comida Rufo Para Perro Cachorro - 44lbs</td>
+                        <td>18 de octubre de 2024</td>
+                        <td>Alimentos</td>
+                        <td>
+                            <div class="form-check form-switch">
+                                <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                    id="switch2" name="switch2" checked>
+                            </div>
+                        </td>
                         <td>
                             <button type="button" class="btn btn-light"><img
                                     src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
@@ -146,8 +156,8 @@
                                     <img class="rounded-1" src="../../resources/img/png/rectangulo.png" width="120px">
                                 </div>
                                 <div class="col">
-                                    <button type="button" class="btn btn-red-color text-light"
-                                        id="btn_cargarImagen" name="btn_cargarImagen">Cargar
+                                    <button type="button" class="btn btn-red-color text-light" id="btn_cargarImagen"
+                                        name="btn_cargarImagen">Cargar
                                         imagen</button>
                                 </div>
                                 <div class="col-sm-12 col-md-auto">
@@ -164,20 +174,22 @@
                                 <div class="col-sm-12 col-md-6 col-lg-6">
                                     <div class="mb-3">
                                         <label for="nombre_producto" class="form-label fw-semibold">Nombre</label>
-                                        <input type="text" class="form-control" id="nombre_producto" name="nombre_producto">
+                                        <input type="text" class="form-control" id="nombre_producto"
+                                            name="nombre_producto">
                                     </div>
                                     <div class="mb-3">
                                         <label for="descripcion_producto"
                                             class="form-label fw-semibold">Descripción</label>
-                                        <textarea class="form-control" id="descripcion_producto" name="descripcionProducto"
-                                            rows="3"></textarea>
+                                        <textarea class="form-control" id="descripcion_producto"
+                                            name="descripcionProducto" rows="3"></textarea>
                                     </div>
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="precio_producto" class="form-label fw-semibold">Precio</label>
-                                                <input type="number" min="0" step="any" class="form-control" id="precio_producto"
-                                                    name="precioProducto">
+                                                <label for="precio_producto"
+                                                    class="form-label fw-semibold">Precio</label>
+                                                <input type="number" min="0" step="any" class="form-control"
+                                                    id="precio_producto" name="precioProducto">
                                             </div>
                                         </div>
                                         <div class="col">
@@ -200,12 +212,11 @@
                                         </select>
                                     </div>
                                     <div class="mb-3">
-                                        <label for="tipo_categoria"
-                                            class="form-label fw-semibold">Categoría</label>
+                                        <label for="tipo_categoria" class="form-label fw-semibold">Categoría</label>
                                         <select class="form-select" id="tipo_categoria" name="tipoCategoria" required>
                                             <option selected disabled value="">Selecciona la Categoría</option>
-                                            <option>Perro</option>
-                                            <option>Gato</option>
+                                            <option></option>
+                                            <option></option>
                                         </select>
                                     </div>
                                     <div class="mb-3">
@@ -228,9 +239,10 @@
                         </div>
                 </div>
                 <div class="container text-center mb-4 mt-4">
-                    <button type="button" class="btn btn-orange-color text-light me-3"
-                        data-bs-dismiss="modal" id="btnGuardar" name="btnGuardar">Guardar</button>
-                    <button type="button" class="btn btn-red-color text-light" id="btnCancelar" name="btnCancelar">Cancelar</button>
+                    <button type="button" class="btn btn-orange-color text-light me-3" data-bs-dismiss="modal"
+                        id="btnGuardar" name="btnGuardar">Guardar</button>
+                    <button type="button" class="btn btn-red-color text-light" id="btnCancelar"
+                        name="btnCancelar">Cancelar</button>
                 </div>
                 </form>
             </div>
@@ -261,8 +273,8 @@
                                     <img class="rounded-1" src="../../resources/img/png/rectangulo.png" width="120px">
                                 </div>
                                 <div class="col">
-                                    <button type="button" class="btn btn-red-color text-light"
-                                        id="btn_cargarImagen" name="btn_cargarImagen">Cargar
+                                    <button type="button" class="btn btn-red-color text-light" id="btn_cargarImagen"
+                                        name="btn_cargarImagen">Cargar
                                         imagen</button>
                                 </div>
                                 <div class="col-sm-12 col-md-auto">
@@ -279,20 +291,22 @@
                                 <div class="col-sm-12 col-md-6 col-lg-6">
                                     <div class="mb-3">
                                         <label for="nombre_producto" class="form-label fw-semibold">Nombre</label>
-                                        <input type="text" class="form-control" id="nombre_producto" name="nombre_producto">
+                                        <input type="text" class="form-control" id="nombre_producto"
+                                            name="nombre_producto">
                                     </div>
                                     <div class="mb-3">
                                         <label for="descripcion_producto"
                                             class="form-label fw-semibold">Descripción</label>
-                                        <textarea class="form-control" id="descripcion_producto" name="descripcionProducto"
-                                            rows="3"></textarea>
+                                        <textarea class="form-control" id="descripcion_producto"
+                                            name="descripcionProducto" rows="3"></textarea>
                                     </div>
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="precio_producto" class="form-label fw-semibold">Precio</label>
-                                                <input type="number" min="0" step="any" class="form-control" id="precio_producto"
-                                                    name="precioProducto">
+                                                <label for="precio_producto"
+                                                    class="form-label fw-semibold">Precio</label>
+                                                <input type="number" min="0" step="any" class="form-control"
+                                                    id="precio_producto" name="precioProducto">
                                             </div>
                                         </div>
                                         <div class="col">
@@ -315,12 +329,11 @@
                                         </select>
                                     </div>
                                     <div class="mb-3">
-                                        <label for="tipo_categoria"
-                                            class="form-label fw-semibold">Categoría</label>
+                                        <label for="tipo_categoria" class="form-label fw-semibold">Categoría</label>
                                         <select class="form-select" id="tipo_categoria" name="tipoCategoria" required>
                                             <option selected disabled value="">Selecciona la Categoría</option>
-                                            <option>Perro</option>
-                                            <option>Gato</option>
+                                            <option></option>
+                                            <option></option>
                                         </select>
                                     </div>
                                     <div class="mb-3">
@@ -343,9 +356,10 @@
                         </div>
                 </div>
                 <div class="container text-center mb-4 mt-4">
-                    <button type="button" class="btn btn-orange-color text-light me-3"
-                        data-bs-dismiss="modal" id="btnGuardar" name="btnGuardar">Guardar</button>
-                    <button type="button" class="btn btn-red-color text-light" id="btnCancelar" name="btnCancelar">Cancelar</button>
+                    <button type="button" class="btn btn-orange-color text-light me-3" data-bs-dismiss="modal"
+                        id="btnGuardar" name="btnGuardar">Guardar</button>
+                    <button type="button" class="btn btn-red-color text-light" id="btnCancelar"
+                        name="btnCancelar">Cancelar</button>
                 </div>
                 </form>
             </div>
@@ -359,7 +373,8 @@
             <div class="modal-content">
                 <div class="modal-header bg-orange-color">
                     <div class="container text-center text-light">
-                        <h1 class="modal-title fs-5 text-center fw-bold" id="exampleModalLabel">Información del producto</h1>
+                        <h1 class="modal-title fs-5 text-center fw-bold" id="exampleModalLabel">Información del producto
+                        </h1>
                     </div>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
                         aria-label="Close"></button>
