--- a/system_huellitas/views/admin/dashboard.html
+++ b/system_huellitas/views/admin/dashboard.html
@@ -64,6 +64,15 @@
                             <li><a class="dropdown-item" href="#">Enero</a></li>
                             <li><a class="dropdown-item" href="#">Febrero</a></li>
                             <li><a class="dropdown-item" href="#">Marzo</a></li>
+                            <li><a class="dropdown-item" href="#">Abril</a></li>
+                            <li><a class="dropdown-item" href="#">Mayo</a></li>
+                            <li><a class="dropdown-item" href="#">Junio</a></li>
+                            <li><a class="dropdown-item" href="#">Julio</a></li>
+                            <li><a class="dropdown-item" href="#">Agosto</a></li>
+                            <li><a class="dropdown-item" href="#">Septiembre</a></li>
+                            <li><a class="dropdown-item" href="#">Octubre</a></li>
+                            <li><a class="dropdown-item" href="#">Noviembre</a></li>
+                            <li><a class="dropdown-item" href="#">Diciembre</a></li>
                         </ul>
                     </div>
                 </div>
