--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -6,16 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huellitas Pets - Marcas</title>
-
     <!-- Icono de la pestaña del navegador -->
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
-
     <!-- Framework Bootstrap - CSS -->
     <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
-
     <!-- Estilos propios -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/scrud_marcas.css">
-
     <!-- Estilos del menú -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
 </head>
@@ -65,9 +61,9 @@
         </div>
 
         <!-- Contenido principal: Tabla de marcas -->
-        <div class="container p-4 mt-5">
+        <div class="container p-4 mt-4">
             <table class="table">
-                <thead class="text-center">
+                <thead>
                     <!-- Encabezados de la tabla -->
                     <tr class="table-warning">
                         <th scope="col">Imagen</th>
@@ -75,7 +71,7 @@
                         <th scope="col">Acciones</th>
                     </tr>
                 </thead>
-                <tbody class="text-center">
+                <tbody>
                     <!-- Datos de ejemplo en la tabla -->
                     <tr>
                         <td><img class="" src="../../resources/img/png/marcas_img_ejemplo.png" alt=""></td>
@@ -85,7 +81,7 @@
                             <button type="button" class="btn btn-light"><img
                                     src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
                             <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#agmarc"><img src="../../resources/img/svg/edit_icon.svg"
+                                data-bs-target="#editar_marc"><img src="../../resources/img/svg/edit_icon.svg"
                                     width="35px"></button>
                         </td>
                     </tr>
@@ -98,7 +94,7 @@
                             <button type="button" class="btn btn-light"><img
                                     src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
                             <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#agmarc"><img src="../../resources/img/svg/edit_icon.svg"
+                                data-bs-target="#editar_marc"><img src="../../resources/img/svg/edit_icon.svg"
                                     width="35px"></button>
                         </td>
                     </tr>
@@ -111,7 +107,7 @@
                             <button type="button" class="btn btn-light"><img
                                     src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
                             <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#agmarc"><img src="../../resources/img/svg/edit_icon.svg"
+                                data-bs-target="#editar_marc"><img src="../../resources/img/svg/edit_icon.svg"
                                     width="35px"></button>
                         </td>
                     </tr>
@@ -134,7 +130,7 @@
             <div class="modal-header bg-orange-color">
                 <div class="container text-center">
                     <!-- Título del modal -->
-                    <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Agregar marca</h1>
+                    <h1 class="modal-title fs-5 text-white fw-bold" id="exampleModalLabel">Agregar marca</h1>
                 </div>
                 <!-- Botón para cerrar el modal -->
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
@@ -156,7 +152,53 @@
                     <!-- Sección para ingresar el nombre de la marca -->
                     <div class="row container d-flex align-items-center">
                         <div class="col">
-                            <label for="nombre_marca" class="fs-8 btn-orange-color"> Nombre</label>
+                            <label for="nombre_marca" class="fs-8 btn-orange-color fw-semibold"> Nombre</label>
+                            <input type="text" class="form-control" aria-label="codigo" name="nombreMarca"
+                                id="nombre_marca">
+                            <br>
+                            <div class="container text-center">
+                                <!-- Botón para agregar la marca -->
+                                <button type="button" class="btn btn-orange-color text-white"> Agregar</button>
+                            </div>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Modal para editar marca -->
+<div class="modal fade" id="editar_marc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-orange-color">
+                <div class="container text-center">
+                    <!-- Título del modal -->
+                    <h1 class="modal-title fs-5 text-white fw-bold" id="exampleModalLabel">Editar marca</h1>
+                </div>
+                <!-- Botón para cerrar el modal -->
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                    aria-label="Close"></button>
+            </div>
+            <form action="" id="crear_marca">
+                <div class="modal-body">
+                    <!-- Sección para cargar imagen y agregar marca -->
+                    <div class="col">
+                        <div class="container d-flex align-items-center justify-content-center">
+                            <img src="../../resources/img/png/fondo_img.png" class="img-fluid" alt="">
+                        </div>
+                        <br>
+                        <div class="container text-center">
+                            <!-- Botón para cargar imagen -->
+                            <button type="button" class="btn btn-red-color text-white"> Cargar Imagen</button>
+                        </div>
+                    </div>
+                    <!-- Sección para ingresar el nombre de la marca -->
+                    <div class="row container d-flex align-items-center">
+                        <div class="col">
+                            <label for="nombre_marca" class="fs-8 btn-orange-color fw-semibold"> Nombre</label>
                             <input type="text" class="form-control" aria-label="codigo" name="nombreMarca"
                                 id="nombre_marca">
                             <br>
